トップを変更しました

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
-    <meta name="title" content="リバイタル（REVITAL）｜資生堂" />
-    <meta name="description" content="資生堂「リバイタル」ブランドサイト。「光ダメージ」に向き合う、エイジングケア。" />
-    <meta name="keywords" content="リバイタル,revital,光ダメージ,資生堂,shiseido,エイジングケア,シミ,たるみ,シワ,紫外線老化,薬用 化粧水,薬用 乳液,松雪泰子" />
+    <meta name="title" content="アメックスプラチナカード" />
+    <meta name="description" content="遥か高ステータスな人間へ" />
+    <meta name="keywords" />
     <meta property="og:url" content="http://localhost:3000/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="リバイタル（REVITAL）｜資生堂" />
-    <meta property="og:description" content="資生堂「リバイタル」ブランドサイト。「光ダメージ」に向き合う、エイジングケア。" />
+    <meta property="og:title" content="アメックスプラチナカード" />
+    <meta property="og:description" content="遥か高ステータスな人間へ" />
     <meta property="og:image" content="assets/images/share/ogp.png" />
-    <meta property="og:site_name" content="リバイタル（REVITAL）｜資生堂" />
+    <meta property="og:site_name" content="アメックスプラチナカード" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="リバイタル（REVITAL）｜資生堂" />
-    <meta name="twitter:description" content="資生堂「リバイタル」ブランドサイト。「光ダメージ」に向き合う、エイジングケア。" />
+    <meta name="twitter:title" content="アメックスプラチナカード" />
+    <meta name="twitter:description" content="遥か高ステータスな人間へ" />
     <meta name="twitter:image" content="assets/images/share/ogp.png" />
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="assets/styles/app.css" />
@@ -238,18 +238,26 @@
                                     <div class="animLine"></div>
                                 </div>
                             </div>
+
+
+
                             <div class="c-top_block__content">
-                                <h2 class="c-top_block__sec_ttl p-top-mv_block__content" data-target="browserChecker"
-                                    data-FadeIn="1">
-                                    NEW REVITAL DEBUT.</h2>
-                                <h3 class="c-top_block__hdg--lv1 p-top-mv_block__hdg--lv1" data-target="browserChecker"
-                                    data-lineAnim="1.5">
-                                    年齢ではなく、私は<br>「光ダメージ」に向き合う。</h3>
-                                <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
-                                    Mさん 40代後半</p>
-                                <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1" data-target="browserChecker"
-                                    data-FadeIn="2.5">
-                                    美容液を忘れるほどの、<br class="is-sp">高機能スキンケア<br class="is-pc">新リバイタル、誕生。</p>
+
+                                <img class="main-img" src="logo.png" alt="">
+                                <div class="right">
+                                    <h2 class="c-top_block__sec_ttl p-top-mv_block__content"
+                                        data-target="browserChecker" data-FadeIn="1">
+                                        NEW REVITAL DEBUT.</h2>
+                                    <h3 class="c-top_block__hdg--lv1 p-top-mv_block__hdg--lv1"
+                                        data-target="browserChecker" data-lineAnim="1.5">
+                                        年齢ではなく、私は<br>「光ダメージ」に向き合う。</h3>
+                                    <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
+                                        Mさん 40代後半</p>
+                                    <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1"
+                                        data-target="browserChecker" data-FadeIn="2.5">
+                                        美容液を忘れるほどの、<br class="is-sp">高機能スキンケア<br class="is-pc">新リバイタル、誕生。</p>
+                                </div>
+
                             </div>
                         </div>
                     </div>
