一通りトップの画像をアメックスにしました

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                         <picture>
                                             <source media="(max-width: 768px)"
                                                 srcset="./assets/images/top/special_panel_shadow_sp.png" /><img
-                                                src="assets/images/top/special_panel_shadow_pc.png" alt="" />
+                                                src="logo.png" alt="" />
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
@@ -383,7 +383,7 @@
                                         <picture>
                                             <source media="(max-width: 768px)"
                                                 srcset="./assets/images/top/campaign_panel_shadow_sp.png" /><img
-                                                src="assets/images/top/campaign_panel_shadow_pc.png" alt="" />
+                                                src="logo.png" alt="" />
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
@@ -431,7 +431,7 @@
                                         <picture>
                                             <source media="(max-width: 768px)"
                                                 srcset="./assets/images/top/try_panel_shadow_sp_jp.png" /><img
-                                                src="assets/images/top/try_panel_shadow_pc_jp.png" alt="" />
+                                                src="logo.png" alt="" />
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
