色をシルバーにしました。

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="p-opening" data-module="Opening">
                 <div class="p-opening_border p-opening_border-top"></div>
                 <div class="p-opening_border p-opening_border-bot"></div>
-                <div class="p-opening_logo"><img src="assets/images/common/h1/logo.svg" alt="REVITAL" /></div>
+                <div class="p-opening_logo"><img src="logo.png" alt="REVITAL" /></div>
                 <div class="p-opening_inner">
                     <div class="p-opening_blur-area">
                         <div class="p-opening_circle p-opening_circle-01"></div>
