トップのメインは添削に出しますので一旦放置します

--- a/index.html
+++ b/index.html
@@ -250,12 +250,14 @@
                                         NEW REVITAL DEBUT.</h2>
                                     <h3 class="c-top_block__hdg--lv1 p-top-mv_block__hdg--lv1"
                                         data-target="browserChecker" data-lineAnim="1.5">
-                                        年齢ではなく、私は<br>「光ダメージ」に向き合う。</h3>
+                                        最高の瞬間を貴方に<br>プラチナカード</h3>
                                     <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
-                                        Mさん 40代後半</p>
+                                        年会費：143,000円(税込)</p>
+                                        <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
+                                            家族カード4枚まで無料</p>
                                     <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1"
                                         data-target="browserChecker" data-FadeIn="2.5">
-                                        美容液を忘れるほどの、<br class="is-sp">高機能スキンケア<br class="is-pc">新リバイタル、誕生。</p>
+                                        輝き続けるあなたを<br class="is-sp">あらゆるシーンで<br class="is-pc">力強くサポートします</p>
                                 </div>
 
                             </div>
