第二セクションの文言作成

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="p-menu__block">
                         <div class="p-menu_product_area">
                             <h2 class="p-menu__logo">
-                                <a href="index.html"><img src="logo.png" alt="REVITAL" /></a>
+                                <a href="index.html"><img class="blue" src="dls-logo-bluebox-solid.svg" alt="" /></a>
                             </h2>
                         </div>
                         <div class="p-menu_link_area">
@@ -72,7 +72,7 @@
             <div class="c-header_container">
                 <div class="c-header_inner">
                     <h1 class="c-header-logo">
-                        <a href="index.html"><img src="logo.png" alt="REVITAL" /></a>
+                        <a href="index.html"><img src="dls-logo-bluebox-solid.svg" alt="REVITAL" /></a>
                     </h1>
                     <div class="c-header_block__menu">
                         <p class="topText">SAISON AMERICAN EXPRESS PLATINUM CARD</p>
@@ -220,16 +220,17 @@
                                 <div class="p-top-mv_block__human" data-scalein="data-scalein">
                                     <picture>
                                         <source media="(max-width: 768px)"
-                                            srcset="./assets/images/top/mv_bg_human_sp.jpg" /><img
-                                            src="assets/images/top/mv_bg_human_pc.jpg" alt="" />
+                                            srcset="./assets/images/top/mv_bg_human_sp.jpg" />
+                                        <!--<img src="assets/images/top/mv_bg_human_pc.jpg" alt="" />-->
+                                        <video src="Tower - 49845.mp4" autoplay poster="myVideo.mp4" loop muted></video>
                                     </picture>
                                 </div>
                             </div>
                             <div class="p-top-mv_block__visual">
                                 <picture>
                                     <source media="(max-width: 768px)"
-                                        srcset="./assets/images/top/mv_items_pc_jp.png" /><img
-                                        src="assets/images/top/mv_items_pc_jp.png" alt="REVITAL" />
+                                        srcset="./assets/images/top/mv_items_pc_jp.png" /><img src="Platinum-Card.png"
+                                        alt="" />
                                 </picture>
                             </div>
                             <div class="c-scroll_navigation thema--white" data-target="browserChecker">
@@ -253,8 +254,8 @@
                                         最高の瞬間を貴方に<br>プラチナカード</h3>
                                     <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
                                         年会費：143,000円(税込)</p>
-                                        <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
-                                            家族カード4枚まで無料</p>
+                                    <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
+                                        家族カード4枚まで無料</p>
                                     <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1"
                                         data-target="browserChecker" data-FadeIn="2.5">
                                         輝き続けるあなたを<br class="is-sp">あらゆるシーンで<br class="is-pc">力強くサポートします</p>
@@ -276,19 +277,19 @@
                                 <ul class="c-know_of__list">
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        屋外レジャーやスポーツをしていた</li>
+                                        毎日に刺激がない</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        日中、肌の乾燥が気になる</li>
+                                        毎日に刺激がない</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        シミ・ソバカスが気になる</li>
+                                        毎日に刺激がない</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        日やけ止めをつけない日がある</li>
+                                        毎日に刺激がない</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        朝のケアは、できるだけシンプルに済ませたい</li>
+                                        毎日に刺激がない</li>
                                 </ul>
                             </div>
                         </div>
@@ -325,16 +326,16 @@
                             </div>
                             <div class="c-top_block__content">
                                 <h3 class="c-top_block__hdg--lv1" data-target="browserChecker" data-lineAnim="0">
-                                    「光ダメージ」に向き合う、<br>新リバイタル、誕生。</h3>
+                                    『ご入会特典』<br>輝き続けるあなたのための</h3>
                                 <p class="p-top-detail_block__desc--lv1" data-target="browserChecker" data-FadeIn="0.6">
-                                    乾燥、ハリ不足やシミなどの<br class="is-sp">エイジングサインは、<br
-                                        class="is-sp">紫外線が大きく影響しています。<br>リバイタルは、<br
-                                        class="is-sp">贅沢なうるおいで肌を満たしながら、<br>「光ダメージ」に向き合う<br
-                                        class="is-sp">独自美容成分が角層の深くまで浸透。<br>さらに美白有効成分4MSK*を配合。<br class="is-sp">
-                                    ハリとうるおいに満ちた
-                                    <br class="is-sp">明るい肌へ導きます。<br>いつまでも自分に自信が持てる美しさへ。</p>
+                                    ご入会3ヶ月以内のカードご利用で<br class="is-sp">メンバーシップ・リワード®のポイント<br
+                                        class="is-sp">合計40,000ポイント獲得可能。<br>□　2つのカードご利用ボーナスを<br
+                                        class="is-sp">ご用意しています。<br><br
+                                        class="is-sp">1,ご入会後3ヶ月以内に合計50万円のカードご利用で20,000ボーナスポイント<br><br class="is-sp">
+                                    2,ご入会後3ヶ月以内に合計100万円のカードご利用でさらに20,000ボーナスポイント
+                                    <br class="is-sp"><br>輝く毎日へと導きます。<br>いつまでも自分に自信が持てる男へ。</p>
                                 <p class="p-top-detail_block__note" data-target="browserChecker" data-FadeIn="1">
-                                    *メラニンの生成を抑え、シミ・そばかすを防ぐ、4-メトキシサリチル酸カリウム塩</p>
+                                    ※本ご入会特典の際はサイトの【ご入会特典に関するご利用条件】を必ずご確認ください。</p>
                             </div>
                         </div>
                     </div>
@@ -366,7 +367,7 @@
                                 <h2 class="c-top_block__sec_ttl" data-target="browserChecker" data-FadeIn="0.6">SPECIAL
                                     CONTENTS</h2>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1">
-                                    光とともに楽しんできた世代の<br>新エイジングケア</h3>
+                                    メタル製の<br>プラチナカード</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
                                     data-FadeIn="1.8">太陽の下で、きらめく時間を重ねてきたあなたに。</p><a
                                     class="c-btn add-line c-top_block_btn" href="special/index.html"
@@ -410,7 +411,55 @@
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     美容液を忘れるほどの、高機能スキンケアを体感。</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    10万人サンプリングキャンペーン</h3>
+                                    トラベル＆ダイニング</h3>
+                                <p class="c-top_block__copy add-line__before" data-target="browserChecker"
+                                    data-FadeIn="2"><span class='u-term is-purple'>応募期限：<span
+                                            class='u-year is-strong'>2020</span><span class='u-year'>年</span><span
+                                            class='u-month is-strong'>9</span><span class='u-month'>月</span><span
+                                            class='u-day is-strong'>20</span>
+                                        <span class='u-week'>日（日）</span>まで</span>
+                                </p><a class="c-btn add-line c-top_block_btn" href="cp/index.html"
+                                    data-target="browserChecker" data-FadeIn="2.5">キャンペーンに応募する<span
+                                        class="lineBox"><span class="animLine"></span></span></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="c-section" id="TOP_CAMPAIGN" data-section="campaign" data-gatarget="top4">
+                    <div class="p-top-campaign_container">
+                        <div class="p-top-campaign_inner c-top_inner">
+                            <div class="c-top_panel_object__wrap" data-scalein="data-scalein">
+                                <div class="c-top_panel_object">
+                                    <div class="c-top_panel_object__shadow">
+                                        <picture>
+                                            <source media="(max-width: 768px)"
+                                                srcset="./assets/images/top/campaign_panel_shadow_sp.png" /><img
+                                                src="logo.png" alt="" />
+                                        </picture>
+                                    </div>
+                                    <div class="c-top_panel_object__container">
+                                        <div class="c-top_panel_inner">
+                                            <picture>
+                                                <source media="(max-width: 768px)"
+                                                    srcset="./assets/images/top/campaign_panel_visual_sp.jpg" /><img
+                                                    src="assets/images/top/campaign_panel_visual_pc.jpg" alt="" />
+                                            </picture>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="p-top_panel_object__label"><img
+                                        src="assets/images/top/campaign_label_limited_pc_jp.png"
+                                        alt="LIMITED ご好評につき期間延長" /></div>
+                                <div class="p-top_panel_object__item"><img
+                                        src="assets/images/top/campaign_items_pc_jp.png" alt="REVITAL" /></div>
+                            </div>
+                            <div class="c-top_block__content">
+                                <h2 class="c-top_block__sec_ttl" data-target="browserChecker" data-FadeIn="0.6">CAMPAIGN
+                                </h2>
+                                <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
+                                    美容液を忘れるほどの、高機能スキンケアを体感。</p>
+                                <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
+                                    心強いサービス</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
                                     data-FadeIn="2"><span class='u-term is-purple'>応募期限：<span
                                             class='u-year is-strong'>2020</span><span class='u-year'>年</span><span
@@ -455,7 +504,7 @@
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     ハリとうるおいに満ちた明るい肌へ。</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    新リバイタル<br>7日間お試しトライアルセット</h3>
+                                    圧倒的な<br>ポイント・プログラム</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
                                     data-FadeIn="2">数量限定発売。</p><a class="c-btn add-line c-top_block_btn"
                                     href="trialset/index.html" data-target="browserChecker"
