これで一通り完成！あとは帰って詳細を考えていきます。

--- a/index.html
+++ b/index.html
@@ -310,16 +310,8 @@
                                     data-productfadein="1.8">
                                     <div class="p-top-detail_block__visual__item">
                                         <picture>
-                                            <source media="(max-width: 768px)"
-                                                srcset="./assets/images/top/detail_item01_visual_pc_jp.png" /><img
+                                            <img
                                                 src="logo.png" class="c" alt="REVITAL" />
-                                        </picture>
-                                    </div>
-                                    <div class="p-top-detail_block__visual__shadow">
-                                        <picture>
-                                            <source media="(max-width: 768px)"
-                                                srcset="./assets/images/top/detail_item01_shadow_pc_jp.png" /><img
-                                                src="assets/images/top/detail_item01_shadow_pc_jp.png" alt="" />
                                         </picture>
                                     </div>
                                 </div>
@@ -347,8 +339,7 @@
                                 <div class="c-top_panel_object">
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
-                                            <source media="(max-width: 768px)"
-                                                srcset="./assets/images/top/campaign_panel_shadow_sp.png" /><img
+                                            <img
                                                 src="david-emrich-6yhWfmej5BY-unsplash.jpg" alt="" />
                                         </picture>
                                     </div>
@@ -423,19 +414,9 @@
                                 <div class="c-top_panel_object">
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
-                                            <source media="(max-width: 768px)"
-                                                srcset="./assets/images/top/campaign_panel_shadow_sp.png" /><img
+                                            <img
                                                 src="logo.png" alt="" />
                                         </picture>
-                                    </div>
-                                    <div class="c-top_panel_object__container">
-                                        <div class="c-top_panel_inner">
-                                            <picture>
-                                                <source media="(max-width: 768px)"
-                                                    srcset="./assets/images/top/campaign_panel_visual_sp.jpg" /><img
-                                                    src="assets/images/top/campaign_panel_visual_pc.jpg" alt="" />
-                                            </picture>
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="p-top_panel_object__label"><img
@@ -504,7 +485,7 @@
                                         <picture>
                                             <source media="(max-width: 768px)"
                                                 srcset="./assets/images/top/try_panel_shadow_sp_jp.png" /><img
-                                                src="logo.png" alt="" />
+                                                src="logo.png" class="tree" alt="" />
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
@@ -679,22 +660,22 @@
                 <div class="c-footer_inner">
                     <div class="c-footer__block">
                         <div class="c-footer_product_area">
-                            <h2 class="c-footer__logo"><img src="assets/images/common/h1/logo.svg" alt="REVITAL" /></h2>
+                            <h2 class="c-footer__logo"><img src="assets/images/common/h1/header_logo_box.gif" alt="REVITAL" /></h2>
                             <p class="c-footer__sub" data-target="browserChecker">「光ダメージ」に向き合う、新リバイタル、誕生。</p>
                         </div>
                         <div class="c-footer_link_area">
                             <ul class="c-footer_links" data-target="browserChecker">
-                                <li class="link"><a href="cp/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>10万人サンプリングキャンペーン</span></a></li>
-                                <li class="link"><a href="special/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>スペシャル</span></a></li>
-                                <li class="link"><a href="dayemulsion/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>薬用 日中用乳液</span></a></li>
-                                <li class="link"><a href="movie/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>MOVIE</span></a></li>
-                                <li class="link"><a href="trialset/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>トライアルセット</span></a></li>
-                                <li class="link"><a href="products/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>商品ラインナップ</span></a></li>
                                 <li class="link"><a
                                         href="http://www.shiseido.co.jp/sw/navi/shopsearchresult.html?sbc=1550&amp;searchMethodKbn=2"
