圧倒的なコミット

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                         年会費：22,000円(税込)</p>
                                     <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
                                         入会資格</p>
-                                    <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1"
+                                    <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1 an"
                                         data-target="browserChecker" data-FadeIn="2.5">
                                         安定した収入があり、<br class="is-sp">社会的信用を有するご連絡可能な方<br class="is-pc">(学生・未成年を除く)</p>
                                 </div>
@@ -321,8 +321,7 @@
                                     『ご入会特典』永久不滅ポイント<br>最大10,000円相当プレゼント</h3>
                                 <p class="p-top-detail_block__desc--lv1" data-target="browserChecker" data-FadeIn="0.6">
                                     ご入会3ヶ月以内のカードご利用で<br class="is-sp">メンバーシップ・リワード®のポイント<br
-                                        class="is-sp">合計40,000ポイント獲得可能。<br>□　3つの新規入会特典を<br
-                                        class="is-sp">ご用意しています。<br><br
+                                        class="is-sp">合計40,000ポイント獲得可能。<br>□　3つの新規入会特典をご用意しています。<br><br
                                         class="is-sp">1,ご入会翌々月までに100,000円以上のご利用で7,000円をプレゼント<br><br class="is-sp">
                                     2,同期間中に「１」と一回以上のキャッシングのご利用でさらに、1,500円相当をプレゼント
                                     <br class="is-sp"><br>3,同期間中に「１」とファミリーカードのご利用でさらに、1,500円相当プレゼント</p>
@@ -391,12 +390,16 @@
                                 <div class="p-accordion__content">
                                     <div class="p-accordion__content__inner">
                                         <ul class="p-accordion__list">
-                                            <li class="p-accordion__list__item" data-target="browserChecker">プレゼント内容：リバイタル
-                                                デイエマルジョン (医薬部外品) 薬用 日中用乳液サンプル１回分</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">「WIN CAVE 築地」ご優待</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">ミニメイドサービス（家事代行サービス）</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">ヘアサロン（整体）・フィットネスクラブご優待</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">パルコ5％OFF</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">セゾンプレミアムゴルサービス</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">プレミアムホテルプリビレッジ</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">ロフトご優待</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">宅配ネットクリーニング「リネット」ご優待</li>
                                             <li class="p-accordion__list__item" data-target="browserChecker">
-                                                応募期間：2月21日（金）～9月20日（日）</li>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">当選者数：リバイタル デイエマルジョン
-                                                (医薬部外品) 薬用 日中用乳液サンプル…合計100,000名さま</li>
+                                                オントレ entrée</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -459,12 +462,10 @@
                                 <div class="p-accordion__content">
                                     <div class="p-accordion__content__inner">
                                         <ul class="p-accordion__list">
-                                            <li class="p-accordion__list__item" data-target="browserChecker">プレゼント内容：リバイタル
-                                                デイエマルジョン (医薬部外品) 薬用 日中用乳液サンプル１回分</li>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">
-                                                応募期間：2月21日（金）～9月20日（日）</li>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">当選者数：リバイタル デイエマルジョン
-                                                (医薬部外品) 薬用 日中用乳液サンプル…合計100,000名さま</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">旅行傷害保険</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">ショッピング安心保険</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">オンラインプロテクション</li>
+                                            <li class="p-accordion__list__item" data-target="browserChecker">セゾン弁護士紹介サービス</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -483,8 +484,7 @@
                                 <div class="c-top_panel_object">
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
-                                            <source media="(max-width: 768px)"
-                                                srcset="./assets/images/top/try_panel_shadow_sp_jp.png" /><img
+                                            <source media="(max-width: 768px)"/><img
                                                 src="logo.png" class="tree" alt="" />
                                         </picture>
                                     </div>
@@ -526,7 +526,7 @@
                             <ul>
                                 <li class="p-accordion__container" data-module="ScrollFade Accordion">
                                     <div class="p-accordion__btn">
-                                        <div class="p-accordion__btn__ttl" data-target="browserChecker">TRAVELTRAVEL</div>
+                                        <div class="p-accordion__btn__ttl" data-target="browserChecker">TRAVEL</div>
                                         <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION REQUIREMENTS
                                         </div>
                                         <div class="p-accordion__btn__img"><img src="../assets/images/cp/arrow.png" alt="" /></div>
@@ -534,12 +534,14 @@
                                     <div class="p-accordion__content">
                                         <div class="p-accordion__content__inner">
                                             <ul class="p-accordion__list">
-                                                <li class="p-accordion__list__item" data-target="browserChecker">プレゼント内容：リバイタル
-                                                    デイエマルジョン (医薬部外品) 薬用 日中用乳液サンプル１回分</li>
-                                                <li class="p-accordion__list__item" data-target="browserChecker">
-                                                    応募期間：2月21日（金）～9月20日（日）</li>
-                                                <li class="p-accordion__list__item" data-target="browserChecker">当選者数：リバイタル デイエマルジョン
-                                                    (医薬部外品) 薬用 日中用乳液サンプル…合計100,000名さま</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">空港特別ラウンジ</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">手荷物無料手配サービス</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">ハイヤー送迎サービスご優待</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">海外用Wi-Fi・携帯電話レンタルサービス</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">現地通過引き出しサービス/li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">海外レストランWeb予約サービス</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">国内リゾートホテル「休暇付」ご優待</li>
+                                                <li class="p-accordion__list__item" data-target="browserChecker">「JW マリオット・ホテル奈良」特別ご優待</li>
                                             </ul>
                                         </div>
                                     </div>
