--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@
                                     <div class="c-top_panel_object__container">
                                         <div class="c-top_panel_inner">
                                             <picture>
-                                                <source media="(max-width: 768px)"
-                                                    srcset="./assets/images/top/campaign_panel_visual_sp.jpg" /><img
+                                                <source media="(max-width: 768px)"><img
                                                     src="assets/images/top/campaign_panel_visual_pc.jpg" alt="" />
                                             </picture>
                                         </div>
@@ -357,7 +356,7 @@
 
                             </div>
                             <div class="c-top_block__content">
-                                <h2 class="c-top_block__sec_ttl" data-target="browserChecker" data-FadeIn="0.6">TRAVEL
+                                <h2 class="c-top_block__sec_ttl ttl" data-target="browserChecker" data-FadeIn="0.6">TRAVEL
                                 </h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     空港特別ラウンジ・2 for 1 by 招待日和 </p>
@@ -417,17 +416,14 @@
                                 <div class="c-top_panel_object">
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
-                                            <img
+                                            <img class="img1"
                                                 src="logo.png" alt="" />
                                         </picture>
                                     </div>
                                 </div>
-                                <div class="p-top_panel_object__label"><img
-                                        src="assets/images/top/campaign_label_limited_pc_jp.png"
-                                        alt="LIMITED ご好評につき期間延長" /></div>
                             </div>
                             <div class="c-top_block__content">
-                                <h2 class="c-top_block__sec_ttl" data-target="browserChecker" data-FadeIn="0.6">SPECIAL
+                                <h2 class="c-top_block__sec_ttl ttl2" data-target="browserChecker" data-FadeIn="0.6">SPECIAL
                                     SERVICE
                                 </h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
@@ -484,7 +480,7 @@
                                 <div class="c-top_panel_object">
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
-                                            <source media="(max-width: 768px)"/><img
+                                            <source media="(max-width: 768px)"/><img class="img2"
                                                 src="logo.png" class="tree" alt="" />
                                         </picture>
                                     </div>
@@ -498,11 +494,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="p-top_panel_object__label"><img
-                                        src="assets/images/top/try_label_limited_pc_jp.png" alt="LIMITED 数量限定" /></div>
                             </div>
                             <div class="c-top_block__content">
-                                <h2 class="c-top_block__sec_ttl" data-target="browserChecker" data-FadeIn="0.6">
+                                <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     POINTPOINT
                                     SERVICE</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
