いらない枠を消しました確認します

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 
 
-
+<!--------------------------------------------------------------------------------------ここから第一セクションです。-->
 
 
                 <section class="c-section" id="TOP_DETAIL" data-section="detail" data-gatarget="top2">
@@ -343,12 +343,7 @@
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
-                                        <div class="c-top_panel_inner">
-                                            <picture>
-                                                <source media="(max-width: 768px)"><img
-                                                    src="assets/images/top/campaign_panel_visual_pc.jpg" alt="" />
-                                            </picture>
-                                        </div>
+                                        
                                     </div>
                                 </div>
                                 <div class="p-top_panel_object__label"><img
@@ -485,13 +480,6 @@
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
-                                        <div class="c-top_panel_inner">
-                                            <picture>
-                                                <source media="(max-width: 768px)"
-                                                    srcset="./assets/images/top/try_panel_visual_sp_jp.png" /><img
-                                                    src="assets/images/top/try_panel_visual_pc_jp.png" alt="" />
-                                            </picture>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
