再度レスポンシブ対応しました

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 <div class="c-top_panel_object">
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
-                                            <img
+                                            <img class="img0"
                                                 src="david-emrich-6yhWfmej5BY-unsplash.jpg" alt="" />
                                         </picture>
                                     </div>
